+ 添加单元测试

--- a/hlw-svr/src/main/resources/config/bootstrap.yml
+++ b/hlw-svr/src/main/resources/config/bootstrap.yml
@@ -22,6 +22,7 @@ mybatis:
   configuration:
     # 自动将数据库中用下划线分隔单词的风格转换为小驼峰风格
     map-underscore-to-camel-case: true
+    default-enum-type-handler: rebue.wheel.mybatis.AutoEnumTypeHandler
 
 pagehelper:
   # 分页合理化参数。
