--- a/hlw-svr/pom.xml
+++ b/hlw-svr/pom.xml
@@ -20,6 +20,11 @@
 			<groupId>com.github.rebue.wheel</groupId>
 			<artifactId>wheel-turing</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.github.rebue.wheel</groupId>
+			<artifactId>wheel-test</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.github.rebue.sbs</groupId>
