--- a/hlw-bll/pom.xml
+++ b/hlw-bll/pom.xml
@@ -21,6 +21,10 @@
 			<artifactId>robotech-bll</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>com.github.rebue.sbs</groupId>
