--- a/hlw-svr/pom.xml
+++ b/hlw-svr/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -20,7 +21,7 @@
 			<groupId>com.github.rebue.wheel</groupId>
 			<artifactId>wheel-turing</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.github.rebue.wheel</groupId>
 			<artifactId>wheel-test</artifactId>
@@ -29,6 +30,12 @@
 		<dependency>
 			<groupId>com.github.rebue.sbs</groupId>
 			<artifactId>smx-spring-boot-starter</artifactId>
+		</dependency>
+
+		<!-- XXX ElasticSearch: 需要依赖es-spring-boot-starter -->
+		<dependency>
+			<groupId>com.github.rebue.sbs</groupId>
+			<artifactId>es-spring-boot-starter</artifactId>
 		</dependency>
 
 		<dependency>
