--- a/hlw-svr/src/main/resources/config/bootstrap-dev.yml
+++ b/hlw-svr/src/main/resources/config/bootstrap-dev.yml
@@ -5,11 +5,6 @@ server:
   # 自定义端口号，方便开发测试
   port: 9400
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://127.0.0.1:8761/eureka/
-
 logging:
   config: classpath:config/log4j2.xml
   level:
@@ -19,18 +14,16 @@ logging:
     com.netflix.discovery: 'OFF'
 
 spring:
-  rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    username: guest
-    password: guest
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/hlw?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
     username: hlw
     password: hlw
   cloud:
-    config:
-      enabled: false
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
+      config:
+        server-addr: 127.0.0.1:8848
   sleuth:
     sampler:
       probability: 1
