--- a/hlw-svr/src/main/resources/config/bootstrap-prod.yml
+++ b/hlw-svr/src/main/resources/config/bootstrap-prod.yml
@@ -13,35 +13,15 @@ logging:
     org.springframework.dao: debug
     org.springframework.cloud: warn
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://127.0.0.1:8761/eureka/
-
 spring:
-  rabbitmq:
-    host: 127.0.0.1
-    port: 5672
-    username: guest
-    password: guest
   cloud:
-    config:
-      profile: prod
+    nacos:
       discovery:
-        enabled: true #开启通过服务来访问Config Server的功能
-        service-id: config-server
-    bus:
-      enabled: true
-      trace:
-        enabled: true # 开启消息跟踪
-      refresh:
-        enabled: true 
+        server-addr: 127.0.0.1:8848
+      config:
+        server-addr: 127.0.0.1:8848
   sleuth:
     sampler:
       probability: 1
     
-endpoints:
-  bus-refresh:
-    enabled: true
-
 appid: 0
