* 优化配置文件

--- a/hlw-svr/src/main/resources/config/bootstrap-dev.yml
+++ b/hlw-svr/src/main/resources/config/bootstrap-dev.yml
@@ -12,6 +12,7 @@ logging:
     rebue: trace
     # 注意'OFF'必须大写并加引号
     com.netflix.discovery: 'OFF'
+    com.alibaba.nacos.client.config.impl.ClientWorker: warn
 
 spring:
   datasource:
