--- a/hlw-svr/src/main/resources/config/bootstrap.yml
+++ b/hlw-svr/src/main/resources/config/bootstrap.yml
@@ -16,10 +16,13 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
   cloud:
     nacos:
+      discovery:
+        # 配置分组(默认为DEFAULT_GROUP)
+        group: REBUE
       config:
         # 默认是properties的方式
         file-extension: yaml
-        # 配置分组(不设置默认为DEFAULT_GROUP)
+        # 配置分组(默认为DEFAULT_GROUP)
         group: REBUE
 
 mybatis:
